add style.css, connect to index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="style.css" />
     <title>Flatiron Final Project</title>
   </head>
   <body>
-    <h1>This is just a placeholder</h1>
+    <h1>Alexis Fonte</h1>
   </body>
 </html>
