--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Flatiron Final Project</title>
   </head>
   <body>
-    <h1>Alexis Fonte</h1>
+    <h1>Hello World!</h1>
+    <script src="script.js"></script>
   </body>
 </html>
